testdata/prettier/w-proc-keyword-missing.out
Lexical/Parse error: (line 1, column 1):
unexpected identifier: "main"
expecting procedure
