testdata/prettier/w-proc-keyword-missing.goat
main()
begin
  write "Test\n";
end
